[project]
name = "root"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.10,<3.13"
dependencies = [
    "tensorflow-probability[tf] (>=0.25.0,<0.26.0)",
    "tfp-causalimpact (>=0.2.0,<0.3.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "snowflake-snowpark-python (>=1.27.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
